syntax = "proto3";

option csharp_namespace = "ImageMicroService.Infrastructure.Protos";

package city;

service GrpcCity {

    rpc GetAllCities (GetAllRequest) returns (CitiesResponse);
}

message GetAllRequest {

}

message CitiesResponse {
    repeated GrpcCityModel city = 1;
}

message GrpcCityModel {
  int32 id = 1;
  string name = 2;
  GrpcCountryModel country = 3;
}

message GrpcCountryModel {
  int32 id = 1;
  string name = 2;
}
